Fix immutable list sort in `AbstractPackageRepository.getImportModuleResponse`